# Sounrunner

./: .env.example  .gitignore  README.md  config.example.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: windows-build.yml
app/: __init__.py
app/collectors/: __init__.py  ad_directory.py  shell.py  windows.py  windows_native.py  windows_remote.py
app/core/: __init__.py  auto_context.py  config.py  crypto.py  database.py  evidence.py  input_normalization.py  integrity.py  inventory.py  logger.py  models.py  network_models.py  (+5 more)
scripts/: build_windows.ps1  collect_windows_baseline.ps1  install_or_update.ps1  run_assessment.ps1
tests/: test_active_directory.py  test_advanced_guided.py  test_aggregation.py  test_auto_context.py  test_backup_platform_import.py  test_backup_readiness.py  test_callback.py  test_classification.py  test_company_reporting.py  test_config.py  test_console_ui.py  test_correlation.py  test_crypto_state.py  test_email_security.py  test_endpoint.py  test_evidence_reporting.py  test_findings_risk.py  test_firewall_vpn_import.py  test_host_fingerprint.py  test_incident_readiness.py  test_integrity.py  test_inventory.py  test_launch_flow.py  test_m365_entra.py  test_network_analysis.py  test_network_assessment.py  test_nmap_parser.py  test_orchestrator.py  test_package_orchestration.py  test_planner.py  test_preflight.py  test_ransomware_readiness.py  test_remote_strategy.py  test_report_appendix.py  test_scanner_api_clients.py  test_scanner_imports.py  test_scope.py  test_secrets.py  test_session.py  test_windows_collectors.py  (+1 more)
(+42 files in other folders)
