[project]
name = "soun-runner"
version = "0.1.0"
description = "Windows-first local cybersecurity assessment runner."
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42.0.0",
  "dnspython>=2.6.0",
  "pyzipper>=0.3.6",
  "PyYAML>=6.0.0",
  "reportlab>=4.0.0",
  "rich>=13.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
